# dugtrio-node

./: README.md  build.ts  bun.lockb  index.ts  package.json
native/: Cargo.toml
native/src/: lib.rs  main.rs
plugins/: draggable.ts  mouseOver.ts  onClick.ts  pin.ts
prebuilt/: mem.node
src/: drawlist.ts  interactable.ts
test/: index.ts
